src/core/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .hero {
    @apply w-full text-[#333];
  }
}

.title {
  @apply m-0 w-full pt-20;
  font-size: 48px;
}

.title,
.description {
  @apply text-center;
}

@layer base {
  h1 {
    font-size: 48px;
    font-weight: 700;
  }
  h2 {
    font-size: 32px;
    font-weight: 700;
  }
  h3 {
    font-size: 28px;
    font-weight: 700;
  }
  h4 {
    font-size: 24px;
    font-weight: 700;
  }
  h5 {
    font-size: 20px;
    font-weight: 700;
  }
  h6 {
    font-size: 16px;
    font-weight: 700;
  }
}

.formHead-wrapper [class^="formHead"] {
  width: 100%;
  border: none;
  margin: 0 auto;
  display: block;
  padding: 10px;
  border-radius: 4px;
  background-color: oklch(var(--b3));
  color: oklch(var(--bc));
  font-size: 16px;
}

.formHead-wrapper [class^="formHead"] h5 {
  font-size: 18px;
  color: oklch(var(--bc));
  padding-bottom: 10px;
  font-family: inherit;
}

.formHead-wrapper .form-title,
.form-description {
  --tw-border-opacity: 1;
  background-color: oklch(var(--b1));
  border-radius: 3px;
  border-color: oklch(var(--p) / var(--tw-border-opacity));
  border-width: 1px;
  font-family: inherit;
}

.modal.show {
  --tw-border-opacity: 1;
  z-index: 1055;
  opacity: 1;
  position: fixed;
  top: 0;
  left: 0;
  overflow-x: hidden;
  overflow-y: auto;
  outline: 0;
  width: 100%;
  height: 100%;
  display: none;
  transform: none;
}

.modal-backdrop {
  z-index: 1050;
  opacity: 0.25;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: black;
}

.modal-dialog {
  position: absolute;
  left: 35%;
  width: auto;
  margin: 1.75rem;
  pointer-events: none;
  transform: none;
  min-width: 500px;
  padding-bottom: 10px;
}

.modal-content {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  color: oklch(var(--bc));
  pointer-events: auto;
  background-color: oklch(var(--b1));
  background-clip: padding-box;
  border: none;
  border-radius: 0.375rem;
  outline: 0;
}

.modal-footer {
  display: flex;
  flex-shrink: 0;
  flex-wrap: wrap;
  align-items: flex-end;
  justify-content: flex-end;
  padding: 10px;
  background-color: oklch(var(--b1));
  border: none;
  border-radius: 0.375rem;
  width: 100%;
  gap: 10px;
}

.modal-body,
.card-modal-entries {
  width: 100%;
}

.card-modal-number,
.card-modal-text,
.card-modal-select,
.card-modal-textarea {
  width: 100%;
  --tw-border-opacity: 1;
  background-color: oklch(var(--b1));
  border-radius: 3px;
  border-color: oklch(var(--p) / var(--tw-border-opacity));
  border-width: 1px;
  font-family: inherit;
  color: oklch(var(--bc));
}

.card-textarea {
  --tw-border-opacity: 1;
  background-color: oklch(var(--b1));
  border-radius: 3px;
  border-color: oklch(var(--p) / var(--tw-border-opacity));
  border-width: 1px;
  font-family: inherit;
  color: oklch(var(--bc));
  width: 100%;
}

.card-modal-number,
.card-modal-text {
  padding: 10px;
}

.card-modal-select [class$="indicatorSeparator"] {
  --tw-border-opacity: 1;
  background-color: oklch(var(--p) / var(--tw-border-opacity)) !important;
}

.card-entry [class$="indicatorSeparator"] {
  --tw-border-opacity: 1;
  background-color: oklch(var(--p) / var(--tw-border-opacity)) !important;
}

.card-modal-select [class$="indicatorContainer"] {
  background-color: oklch(var(--b1));
  color: oklch(var(--bc));
}

.card-entry [class$="indicatorContainer"],
[class$="ValueContainer"] {
  background-color: oklch(var(--b1));
  color: oklch(var(--bc));
}

.card-modal-select [class$="-control"],
[class$="singleValue"] {
  background-color: oklch(var(--b1)) !important;
  border: none !important;
  color: oklch(var(--bc)) !important;
}

.card-select [class$="-control"] {
  --tw-border-opacity: 1;
  background-color: oklch(var(--b1)) !important;
  border-color: oklch(var(--p) / var(--tw-border-opacity)) !important;
  border-width: 1px !important;
  color: oklch(var(--bc)) !important;
  border-radius: 4px;
}

.card-entry [class$="singleValue"] {
  background-color: oklch(var(--b1)) !important;
  border: none !important;
  color: oklch(var(--bc)) !important;
}

.card-select {
  border: none !important;
}

[id^="react-select"] {
  color: oklch(var(--bc)) !important;
  background-color: oklch(var(--b1)) !important;
}

.card-text {
  --tw-border-opacity: 1;
  color: oklch(var(--bc));
  background-color: oklch(var(--b1));
  padding: 3px;
  border-color: oklch(var(--p) / var(--tw-border-opacity)) !important;
  border-width: 1px !important;
  width: 100%;
}

.formHead-wrapper [class^="cardEntries"],
[class^="card-entry-row"],
[class^="cardInteractions"],
[class^="section-head"],
[class^="section-footer"] {
  color: oklch(var(--bc)) !important;
  background-color: oklch(var(--b3));
  border: none !important;
}

.formHead-wrapper [class^="cardEntries"] h5 {
  color: oklch(var(--bc)) !important;
  background-color: oklch(var(--b3));
  border: none !important;
  padding-bottom: 3px;
}

.formHead-wrapper .label {
  color: oklch(var(--bc));
}

.formHead-wrapper .d-flex,
.card-container,
.section-container,
.section-interactions {
  color: oklch(var(--bc));
  background-color: oklch(var(--b3)) !important;
  border-bottom: none !important;
  border-top: none !important;
  border-left: none !important;
  border-right: none !important;
  width: 100% !important;
  border: none !important;
}

.d-flex {
  display: flex;
}

.card-category-options {
  color: oklch(var(--bc));
  background-color: oklch(var(--b3)) !important;
  border-bottom: none !important;
  border-top: none !important;
  border-left: none !important;
  border-right: none !important;
  width: 100% !important;
  border: none !important;
  text-align: left;
}

.collapse:not(.show) {
  display: none;
}

.formHead-wrapper [id$="info"],
[id$="required"] {
  color: oklch(var(--bc));
}

.formHead-wrapper [id$="moveupbiginfo"],
[id$="editinfo"],
[id$="trashinfo"] {
  display: inline-block;
  width: 50px;
  height: 50px;
  padding: 0.25em;
}

.formHead-wrapper [id$="required"],
[id$="Default"] {
  color: oklch(var(--bc));
  accent-color: oklch(var(--b3));
  background-color: oklch(var(--b2));
  border-color: oklch(var(--b1));
}

.fa-circle-question,
.fa-pencil,
.fa-arrow-up,
.fa-arrow-down,
.fa-square-plus {
  color: oklch(var(--s)) !important;
  border: none !important;
}

.fa-trash {
  color: oklch(var(--a)) !important;
  border: none !important;
}

.card-enum {
  background-color: oklch(var(--b1)) !important;
}

